fix(input): modify the spacing of the input and the perpand to 8 px #INFR-6441

--- a/src/input/styles/input.scss
+++ b/src/input/styles/input.scss
@@ -66,6 +66,11 @@
             pointer-events: none;
         }
     }
+
+    & > .input-prepend + .form-control {
+        padding-left: variables.$input-padding-x-fixed;
+        padding-right: variables.$input-padding-x-fixed;
+    }
 }
 
 .thy-input-search {
